--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ body {
   margin-right: 15px;
 }
 .title {
+    margin-top: 10px;
+    margin-bottom: 20px;
   width: 100%;
   font-size: 12px;
   display: flex;
@@ -44,16 +46,6 @@ body {
   text-align: center;
 }
 
-#reveal {
-  padding: 10px 20px;
-  background-color: blue;
-  color: white;
-  border: none;
-  cursor: pointer;
-  width: 250px;
-  height: 50px;
-  border-radius: 10px;
-}
 .head {
   text-align: left;
   font-size: 12px;
@@ -95,7 +87,8 @@ align-items: center;
   border-radius: 10px 10px 0 0;
 }
 .area {
-    overflow-y: scroll;
+    border: solid 1px rgb(37, 37, 37);
+    overflow-y: hidden;
   padding: 15px;
   background-color: rgb(12, 12, 12);
   border-radius: 10px;
@@ -104,13 +97,15 @@ align-items: center;
   min-height: calc(100vh - 200px);
   
 }
+
 .typewriter {
     background-color: #0471a6;
     border-radius: 12px;
     padding: 15px;
   color: whitesmoke;
-  font-family: "Roboto Mono", monospace;
+  /* font-family: "Roboto Mono", monospace; */
   /* border-right: 0.15em solid #1e1e1e; */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .typewriter2 {
     background-color: #0471a6;
@@ -122,7 +117,8 @@ align-items: center;
 }
 #from{
     color: black;
-    font-family: "Roboto Mono", monospace;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 .control {
   display: flex;
@@ -141,7 +137,7 @@ align-items: center;
   color: whitesmoke;
   width: 100%;
   height: 70px;
-  background-color: rgba(128, 128, 128, 0.185);
-  border: solid 1px rgba(128, 128, 128, 0.185);
+  background-color: rgb(12, 12, 12);
+  border: solid 1px rgb(37, 37, 37);
   border-radius: 10px;
 }
