--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ body {
   letter-spacing: 0.5px;
 
 }
+hr{
+    height: 1px;
+    border: none;
+    background-color: #3e748f;
+}
 .title img {
   width: 40px;
   margin-right: 15px;
