--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,16 @@ hr{
     border: none;
     background-color: #3e748f;
 }
+.price button{
+    height: 50px;
+    width: 100%;
+    border-radius: 10px;
+    color: white;
+    background-color: #0471a6;
+    border: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
 .title img {
   width: 40px;
   margin-right: 15px;
