--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ hr {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: right;
   padding-right: 15px;
+  text-transform: capitalize;
 }
 .typewriter {
   background-color: #0471a6;
@@ -165,6 +166,6 @@ hr {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 #from {
-  color: black;
+  color: #0c090d;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
